[package]
name = "bin_buffer"
version = "0.1.13"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
description = "A simple library for writing objects to binairy buffers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/codybloemhard/bin-buffer"
keywords = ["io"]
categories = ["command-line-utilities", "filesystem", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
